# pydantic-ai

./: pyproject.toml
pydantic_ai_slim/: pyproject.toml
pydantic_ai_slim/pydantic_ai/: __init__.py
