[tool.poetry]
name = "pydantic_ai"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <piercefreeman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "envelope"
url = "https://app.envelope.dev/simple"
priority = "primary"
