[tool.poetry]
name = "pydantic_ai"
version = "0.1.3"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
eval-type-backport = ">=0.2.0"
griffe = ">=1.3.2"
httpx = ">=0.27.2"
logfire-api = ">=1.2.0"
pydantic = ">=2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "envelope"
url = "https://app.envelope.dev/simple"
priority = "primary"
